Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2011-05-23 (SVN):
    * added Thomas' egypt1 ankh_platform stuff as an optional patch.

2011-05-22 (SVN):
    * hexenworld gamecode: Really fixed the HexenWorld server crash upon
      running the romeric5 (Temple of Mars) map which loads fine now on
      all machines we tested.  The problem was that timing-dependent
      hackings associated with func_door_rotating not working as expected
      under hexenworld, so such hacks are eliminated.  The solution also
      includes making sure that all doors have been initialized before
      LinkDoors() is called the first time. See new func_linkdoors_cnt()
      procedure and the linkdoors_cnt and EntInitDone globals and the
      places they are used in doors.hc, triggers.hc and world.hc.  The
      solution is applied to hexeneworld, as well as to siege HexenC code.
      The old work around of increasing the nexthink value to 2s in
      trigger_interval() is reverted.
    * Changed beta version stamp to 2011-05-22.

2011-05-22 (SVN):
    * pr_edict.c:  Added ents_not_loaded as a new cvar holding knowlegde
      that the loading of entities is not complete.  It is set to 1 upon
      entering PR_LoadProgs() and 0 just before leaving ED_LoadFromFile().
      This cvar will be used by the hexenworld progs to overcome timing
      problems associated with func_door_rotating, i.e. the well-known
      crash with the romeric5 map due to the four swinging blades.

2011-05-22 (SVN):
    * mapfixes: Added README file to explain what they are.  Added note
      that the fixed entities of the data1 maps must be used with v1.11
      of hexen2 maps. Updated the rpm spec file to install the new README
      files.

2011-05-22 (SVN):
    * oslibs, dxsdk: Updated dx headers from mingw-w64 svn repo rev.4173.

2011-05-21 (SVN):
    * quakefs.c (FS_Init): Use the new Cvar_SetROM() to set the oem and
      registered cvars.

2011-05-21 (SVN):